--- a/contact.html
+++ b/contact.html
@@ -12,50 +12,52 @@
   <div class="container">
     <header class="header">
       <div class="h-title">
-      <a href="#" ><img class="logoimg" src="images/logo.png" alt="logo"></a>
- <!-- responsive nav bar -->
- <div class="sp-menu">
-  <input type="checkbox" id="nav-input" class="nav-invisible">
-  <label id="nav-open" for="nav-input" onclick=""><span></span></label>
-  <div id="nav-contents">
-  <nav>
-  <ul>
-    <li class="h-sp-list"><a href="#">
-      <span class="h-sp-top">ホーム</span><br>
-      <span class="h-sp-bottom">HOME</span></a></li>
-    <li class="h-sp-list"><a href="company.html" >
-      <span class="h-sp-top">会社概要</span><br>
-      <span class="h-sp-bottom">COMPANY</span></a></li>
-    <li class="h-sp-list" ><a href="service.html">
-      <span class="h-sp-top">サービス</span><br>
-      <span class="h-sp-bottom">SERVICE</span></a></li>
-    <li class="h-sp-list"><a href="recruit.html">
-      <span class="h-sp-top">採用情報</span><br>
-      <span class="h-sp-bottom">RECRUITE</span></a></li>
-    <li class="h-sp-list"><a href="link.html">
-      <span class="h-sp-top">リンク</span><br>
-      <span class="h-sp-bottom">LINK</span></a></li>
-    <li class="h-sp-list"><a href="contact.html">
-      <span class="h-sp-top">お問い合わせ</span><br>
-      <span class="h-sp-bottom">CONTACT</span></a></li>
-  </ul>
-</nav>
-</div>
-</div>
-</div>
-<!------------------------------->
+        <a href="#" ><img class="logoimg" src="images/logo.png" alt="logo"></a>
+      
+      <!-- responsive nav bar -->
+     <div class="sp-menu">
+        <input type="checkbox" id="nav-input" class="nav-invisible">
+        <label id="nav-open" for="nav-input" onclick=""><span></span></label>
+        <div id="nav-contents">
+        <nav>
+        <ul>
+          <li class="h-sp-list"><a href="index.html">
+            <span class="h-sp-top">ホーム</span><br>
+            <span class="h-sp-bottom">HOME</span></a></li>
+          <li class="h-sp-list"><a href="company.html" >
+            <span class="h-sp-top">会社概要</span><br>
+            <span class="h-sp-bottom">COMPANY</span></a></li>
+          <li class="h-sp-list" ><a href="service.html">
+            <span class="h-sp-top">サービス</span><br>
+            <span class="h-sp-bottom">SERVICE</span></a></li>
+          <li class="h-sp-list"><a href="recruit.html">
+            <span class="h-sp-top">採用情報</span><br>
+            <span class="h-sp-bottom">RECRUIT</span></a></li>
+          <li class="h-sp-list"><a href="link.html">
+            <span class="h-sp-top">リンク</span><br>
+            <span class="h-sp-bottom">LINK</span></a></li>
+          <li class="h-sp-list"><a href="contact.html">
+            <span class="h-sp-top">お問い合わせ</span><br>
+            <span class="h-sp-bottom">CONTACT</span></a></li>
+        </ul>
+      </nav>
+      </div>
+      </div>
+    </div>  
+      <!------------------------------->
+
+   
 
       <nav class="h-nav">
         <ul>
-          <li class="h-list"><a href="index.html" class="h-l-box" target="_blank"><span class="h-l-top">ホーム</span><br><span class="h-l-bottom">HOME</span></a></li>
+          <li class="h-list"><a href="index.html" class="h-l-box" ><span class="h-l-top">ホーム</span><br><span class="h-l-bottom">HOME</span></a></li>
           <li class="h-list"><a href="company.html" class="h-l-box" ><span class="h-l-top">会社概要</span><br><span class="h-l-bottom">COMPANY</span></a></li>
-          <li class="h-list" ><a href="service.html" class="h-l-box" target="_blank"><span class="h-l-top">サービス</span><br><span class="h-l-bottom">SERVICE</span></a></li>
-          <li class="h-list"><a href="recruit.html" class="h-l-box" target="_blank"><span class="h-l-top">採用情報</span><br><span class="h-l-bottom">RECRUITE</span></a></li>
-          <li class="h-list"><a href="link.html" class="h-l-box"><span class="h-l-top">リンク</span><br><span class="h-l-bottom">LINK</span></a></li>
-          <li class="h-list"><a href="#" class="h-l-box active" target="_blank"><span class="h-l-top">お問い合わせ</span><br><span class="h-l-bottom">CONTACT</span></a></li>
+          <li class="h-list" ><a href="service.html" class="h-l-box" ><span class="h-l-top">サービス</span><br><span class="h-l-bottom">SERVICE</span></a></li>
+          <li class="h-list"><a href="recruit.html" class="h-l-box" ><span class="h-l-top">採用情報</span><br><span class="h-l-bottom">RECRUIT</span></a></li>
+          <li class="h-list"><a href="link.html" class="h-l-box" ><span class="h-l-top">リンク</span><br><span class="h-l-bottom">LINK</span></a></li>
+          <li class="h-list "><a href="contact.html" class="h-l-box active" ><span class="h-l-top">お問い合わせ</span><br><span class="h-l-bottom">CONTACT</span></a></li>
         </ul>
       </nav>
-
 
     </header>
     <div class="contents">
